Fixed small font on mobile bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,10 +200,6 @@ main {
     .footer-sections {
         word-spacing: 5vw;
     }
-
-    #code-container {
-        font-size: 5px;
-    }
 }
 
 textarea {
